feat: port Pickup Range 2.0 to Minecraft 1.16.5